--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
             <artifactId>gatling-charts-highcharts</artifactId>
             <version>${gatling.version}</version>
             <scope>test</scope>
+
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.gatling</groupId>
@@ -39,6 +46,11 @@
             <groupId>io.gatling</groupId>
             <artifactId>gatling-jdbc</artifactId>
             <version>3.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock-jre8</artifactId>
+            <version>2.35.0</version>
         </dependency>
     </dependencies>
     <build>
